--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,24 +6,27 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <button
+      <button *ngIf="isAuthenticated"
         ion-item
         icon-left
-        (click)="onLoad(tabsPage)">
+        (click)="onLoad(rootPage)">
         <ion-icon name="book"></ion-icon>
         Recipe Book
      </button>
-      <button ion-item icon-left
+      <button *ngIf="!isAuthenticated"
+        ion-item icon-left
         (click)="onLoad(signinPage)">
         <ion-icon name="log-in"></ion-icon>
         SignIn
       </button>
-      <button ion-item icon-left
+      <button *ngIf="!isAuthenticated"
+        ion-item icon-left
         (click)="onLoad(signupPage)">
         <ion-icon name="person"></ion-icon>
         SignUp
       </button>
-      <button ion-item icon-left
+      <button *ngIf="isAuthenticated"
+        ion-item icon-left
         (click)="onLogout()">
         <ion-icon name="log-out"></ion-icon>
         Logout
@@ -33,4 +36,4 @@
 </ion-menu>
 
 
-<ion-nav [root]="tabsPage" #nav></ion-nav>
+<ion-nav [root]="rootPage" #nav></ion-nav>
